# campaign-ops-team-adk

./: AGENTS.md  LICENSE  PROJECT_DESCRIPTION.md  README.md  pyproject.toml
Example result/: Example 2.json
campaign_ops_team/: .agent_engine_config.json  .env.example  __init__.py  agent.py  config.py  orchestrator.py  prompt.py  requirements.txt  tools.py
campaign_ops_team/sub_agents/: __init__.py  config.py  delivery_agent.py  frontline_agents.py  google_search_agent.py  planner_agents.py
campaign_ops_team/sub_agents/delivery_group/: __init__.py  delivery_agent.py
campaign_ops_team/sub_agents/frontline_group/: __init__.py  frontline_agents.py
campaign_ops_team/sub_agents/planner_group/: __init__.py  planner_agents.py
campaign_ops_team/sub_agents/support_team/: __init__.py  google_search_agent.py
campaign_ops_team/tools/: __init__.py  tools.py
manual_operations/: clean_up.py  test.py
